[package]
name = "mojibox"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for flexible Unicode string manipulation and analysis"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/mojibox"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
icu_segmenter = "1.4"
icu_locid = "1.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"